--- a/my_whatsapp_agent/.gitignore
+++ b/my_whatsapp_agent/.gitignore
@@ -85,12 +85,16 @@ celerybeat-schedule
 
 # Environments
 .env
-.venv
+.venv/
+.venv/*
 env/
 venv/
 ENV/
 env.bak/
 venv.bak/
+
+# Virtual environment
+**/.venv/**
 
 # Spyder project settings
 .spyderproject
